# RP2040FreeRTOS

./: .gitmodules  CMakeLists.txt  LICENSE
src/: main.c
